@@ -1,6 +1,7 @@
 openmediavault (7.4.18-1) stable; urgency=low
 
-  *
+  * Try to prevent connection errors when installing plugins
+    or package updates via UI.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 Dec 2024 13:10:58 +0100
 
